tests/analyze/redefine-top-level/analyze.snap
---
source: tests/analyze.rs
expression: output
---
error: Duplicate top-level definition `x`.
> 2 | def x = 2
          ^
